# rag-ebook-explorer

./: .env.example  .gitignore  Containerfile  README.md  compose.yaml  pyproject.toml  tox.ini
init-db/: 01-init.sql
src/ebook_rag_explorer/: __init__.py  config.py  models.py
src/ebook_rag_explorer/adapters/: __init__.py
src/ebook_rag_explorer/adapters/embedding/: __init__.py  sentence_transformer_adapter.py
src/ebook_rag_explorer/adapters/llm/: __init__.py  langchain_llm_adapter.py
src/ebook_rag_explorer/adapters/parsers/: __init__.py  epub_parser.py  pdf_parser.py
src/ebook_rag_explorer/adapters/retrieval/: __init__.py  chroma_retriever.py  cross_encoder_reranker.py  postgres_retriever.py
src/ebook_rag_explorer/adapters/vectorstore/: __init__.py  chroma_adapter.py  postgres_adapter.py
src/ebook_rag_explorer/api/: __init__.py  app.py  dependencies.py
src/ebook_rag_explorer/api/routes/: __init__.py  books.py  collections.py  index.py  search.py
src/ebook_rag_explorer/frontend/: __init__.py  api_client.py  config.py  main.py  styles.py
src/ebook_rag_explorer/frontend/components/: __init__.py  books.py  collections.py  search.py  upload.py
src/ebook_rag_explorer/ports/: __init__.py  embedder_port.py  llm_port.py  parser_port.py  reranker_port.py  retriever_port.py  vectorstore_port.py
src/ebook_rag_explorer/services/: __init__.py  chunking_service.py  indexing_service.py  retrieval_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_api.py  test_chroma_adapter.py  test_postgres_adapter.py
tests/unit/: conftest.py
tests/unit/adapters/: test_collections.py  test_epub_parser.py  test_pdf_parser.py  test_reranker.py
tests/unit/services/: test_chunking_service.py
