[project]
name = "ebook-rag-explorer"
version = "0.1.0"
description = "A RAG application for indexing and exploring EPUB/PDF ebooks"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["rag", "ebook", "pdf", "epub", "semantic-search", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    
    # Frontend (Phase 6)
    "streamlit>=1.40.0",
    "httpx>=0.27.0",
    
    # LangChain
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.2.0",
    
    # Embeddings & Reranking
    "sentence-transformers>=3.2.0",
    
    # Database (PostgreSQL + pgvector)
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.2.5",
    
    # Document Parsing
    "pymupdf>=1.24.0",
    "ebooklib>=0.18",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.0",
    
    # Configuration
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "testcontainers>=4.8.0",
    
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    
    # Task Runner
    "tox>=4.23.0",
    "tox-uv>=1.16.0",
]

[project.scripts]
serve-api = "ebook_rag_explorer.api.app:main"

[project.urls]
Homepage = "https://github.com/user/ebook-rag-explorer"
Repository = "https://github.com/user/ebook-rag-explorer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebook_rag_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow tests",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.33.0",
    "testcontainers>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "tox>=4.23.0",
    "tox-uv>=1.16.0",
]
